# chip8-emulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  chip8-emulator  cmake_install.cmake
src/: chip8.cpp  chip8.h  main.cpp  window.cpp  window.h
